--- a/TraktKit.xcodeproj/xcshareddata/xcschemes/TraktKit.xcscheme
+++ b/TraktKit.xcodeproj/xcshareddata/xcschemes/TraktKit.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "26152ADE1D7AFDAC00E40150"
+            BuildableName = "TraktKit.framework"
+            BlueprintName = "TraktKit"
+            ReferencedContainer = "container:TraktKit.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
